--- a/404.html
+++ b/404.html
@@ -152,33 +152,33 @@
        height: 6px;
        width:40px;
        background:#65bad499 ;
+       margin:0 2px;
      }
      .prosess span{
        height: 6px;
        background:#65bad4 ;
        display: block;
-       margin:0 2px;
      }
      body{
-       background: #000;
+       background: #111;
        color: #fff;
      }
      .st{
        display: flex;
      }
    </style>
-   <ul >
+   <!---ul >
      <li >
        <p >dd</p>
        <div class="st">
          <div class="prosess">
            <span style="width:10px;">
-             0%
+             
            </span>
          </div>
          <div class="prosess">
            <span style="width:2px;">
-             0%
+             
            </span>
          </div>
          <div class="prosess">
@@ -199,5 +199,18 @@
        </div>
      </li>
    </ul>
+   <svg height="200" version="1.1" width="235" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="overflow: hidden; position: relative; top: -0.5px;">
+<desc style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Created with Raphaël 2.3.0</desc>
+<defs style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
+<path fill="none" stroke="#555555" d="M117,20A80,80,0,1,1,116.99,20" stroke-width="20" transform="matrix(1,0,0,1,0,0)" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
+</svg---->
  </body>
 </html>
+<script >
+  var s={
+    account:{},
+    statos:true,
+    id:836
+  }
+  console.log(s)
+</script>
