--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Uma seleção variada de videogames que podem ser jogados no computador.">
   <!--https://youtube.com/playlist?list=https://youtube.com/playlist?list=-->
   <!---iframe allowfullscreen="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"src="https://www.youtube.com/embed/Yno0DudsUwA?enablejsapi=1&origin=http%3A%2F%2Flocalhost%3A5502&widgetid=1&autoplay=7" allow="autoplay"></iframe-->
-  <base href="https://eriklicom.github.io/SiteL/">
+  
   <title>STERK GAMES</title>
   <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
   <script src="main.js"></script>
@@ -209,57 +209,31 @@
 <path fill="none" stroke="#555555" d="M117,20A80,80,0,1,1,116.99,20" stroke-width="20" transform="matrix(1,0,0,1,0,0)" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
 </svg---->
 <style >
-  .M3aDs9{
-    width:100%;
-    position: relative;
+  .vHbsA{
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 20px;
   }
-  .TB_YgaS{
-    width:100%;
+  .kMuofy{
+    margin-top:10px;
   }
-  .TB_YgaS img{
-    width:100%;
-  }
-  .TM_mSev span{
-    font-size: 14px;
-    font-weight: 500;
-  }
-  .TM_mSev{
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    background: #000e;
-    color: #fff;
-    padding: 5px;
-    margin: 10px;
-    border-radius: 5px;
-    
-  }
-  .JXw7G{
-    position:relative;
-  }
-  .im_nFw{
-    height: 100%;
-  }
-  .Q5vBsS{
+  .dxgtXa{
     display:flex;
-  }
-  .TTL_uCEej{
-    margin: 0 0 10px 0;
-  }
-  .ft_mGA{
-    font-size: 10px;
-    margin: 10px;
-    font-weight: 600;
-    position: absolute;
-  }
-  .ft_vZa{
-    font-size: 10px;
-    margin: 10px;
-    font-weight: 600;
-    position: ;
+    flex-wrap: nowrap;
+    width:100%;
   }
 </style>
-<div class="Layout-sc-nxg1ff-0 hMlZFl"><div class="Layout-sc-nxg1ff-0 dxgtXa"><div class="ScTextWrapper-sc-14f6evl-1 jhHeod"><div class="ScTextMargin-sc-14f6evl-2 fNXukb"><a class="ScCoreLink-sc-udwpw5-0 EEXEu tw-link" href="/gaules"><p title="Rerun: Guerra das Mulas - !vote - Siga @gaules nas redes sociais" class="CoreText-sc-cpl358-0 iKTobe">Rerun: Guerra das Mulas - !vote - Siga @gaules nas redes sociais</p></a></div><div class="ScTextMargin-sc-14f6evl-2 fNXukb"><a class="ScCoreLink-sc-udwpw5-0 kMuofy tw-link" href="/gaules/home"><p class="CoreText-sc-cpl358-0 icZXqb"><button class="ScCoreLink-sc-udwpw5-0 irGnkE tw-link">Gaules</button></p></a><a class="ScCoreLink-sc-udwpw5-0 kMuofy tw-link" href="/directory/game/War%20by%20Grow%20Games"><p class="CoreText-sc-cpl358-0 icZXqb"><button class="ScCoreLink-sc-udwpw5-0 irGnkE tw-link">War by Grow Games</button></p></a></div><div class="Layout-sc-nxg1ff-0 sc-298901ac-0 jWPtjC kighvi"><div class="Layout-sc-nxg1ff-0 fcHwQz"><a class="ScTag-sc-xzp4i-0 ihtEdM tw-tag" aria-describedby="9NO14OP1xhrLJo4LzYSubfH5yOYigbq4" aria-label="Para transmissões que utilizam o idioma português." title="Para transmissões que utilizam o idioma português." href="/directory/all?tl=Tag%7D%7C%7B39ee8140-901a-4762-bfca-8260dea1310f"><div class="ScTagContent-sc-xzp4i-1 dGhcCy"><div class="ScTagText-sc-xzp4i-2 iVudQj"><span>Português</span></div></div></a></div></div></div><div class="ScImageWrapper-sc-14f6evl-0 iHirem"><a class="ScCoreLink-sc-udwpw5-0 kMuofy tw-link" href="/gaules/home"><figure aria-label="" class="ScAvatar-sc-12nlgut-0 gJacVk tw-avatar"><img class="InjectLayout-sc-588ddc-0 iqxRIm tw-image tw-image-avatar" alt="" src="https://static-cdn.jtvnw.net/jtv_user_pictures/f4b12683-57ff-4b57-926a-67512b43a7ff-profile_image-50x50.png"></figure></a></div></div></div><a class="ScCoreLink-sc-udwpw5-0 kMuofy tw-link" href="/gaules"><div class="Layout-sc-nxg1ff-0 kfgElf"><div class="ScAspectRatio-sc-1sw3lwy-1 jRMlwG tw-aspect"><div class="ScAspectSpacer-sc-1sw3lwy-0 eGEFTO"></div><img alt="" class="tw-image" sizes="39.5vw,(max-width: 540px) and (orientation: portrait) 65vw,(min-width: 768px) and (orientation: landscape) 26vw" srcset="https://static-cdn.jtvnw.net/previews-ttv/live_user_gaules-276x155.jpg 276w,https://static-cdn.jtvnw.net/previews-ttv/live_user_gaules-80x45.jpg 80w,https://static-cdn.jtvnw.net/previews-ttv/live_user_gaules-414x233.jpg 414w,https://static-cdn.jtvnw.net/previews-ttv/live_user_gaules-552x311.jpg 552w,https://static-cdn.jtvnw.net/previews-ttv/live_user_gaules-828x466.jpg 828w,https://static-cdn.jtvnw.net/previews-ttv/live_user_gaules-1242x699.jpg 1242w,https://static-cdn.jtvnw.net/previews-ttv/live_user_gaules-1656x932.jpg 1656w" src="https://static-cdn.jtvnw.net/previews-ttv/live_user_gaules-276x155.jpg"></div><div class="ScPositionCorner-sc-1iiybo2-1 ecZDrm"><div class="ScChannelStatusTextIndicator-sc-1f5ghgf-0 gnLohg tw-channel-status-text-indicator" font-size="font-size-6"><p class="CoreText-sc-cpl358-0 cKdUSG">AO VIVO</p></div></div><div class="ScPositionCorner-sc-1iiybo2-1 etLqGu"><div class="ScMediaCardStatWrapper-sc-1ncw7wk-0 cEFvsb tw-media-card-stat">3,3&nbsp;mil espectadores</div></div></div></a>
+<article class="vHbsA">
+  <div class="Layout-sc-nxg1ff-0 hMlZFl">
+    <div class="Layout-sc-nxg1ff-0 dxgtXa">
+      <div class="ScTextWrapper-sc-14f6evl-1 jhHeod">
+        <div class="ScTextMargin-sc-14f6evl-2 fNXukb">
+          <a class="ScCoreLink-sc-udwpw5-0 EEXEu tw-link" href="/gaules">
+            <p title="Rerun: Guerra das Mulas - !vote - Siga @gaules nas redes sociais" class="CoreText-sc-cpl358-0 iKTobe">Rerun: Guerra das Mulas - !vote - Siga @gaules nas redes sociais</p>
+          </a>
+        </div>
+        <div class="ScTextMargin-sc-14f6evl-2 fNXukb"><a class="ScCoreLink-sc-udwpw5-0 kMuofy tw-link" href="/gaules/home"><p class="CoreText-sc-cpl358-0 icZXqb"><button class="ScCoreLink-sc-udwpw5-0 irGnkE tw-link">Gaules</button></p></a><a class="ScCoreLink-sc-udwpw5-0 kMuofy tw-link" href="/directory/game/War%20by%20Grow%20Games"><p class="CoreText-sc-cpl358-0 icZXqb"><button class="ScCoreLink-sc-udwpw5-0 irGnkE tw-link">War by Grow Games</button></p></a></div><div class="Layout-sc-nxg1ff-0 sc-298901ac-0 jWPtjC kighvi"><div class="Layout-sc-nxg1ff-0 fcHwQz"><a class="ScTag-sc-xzp4i-0 ihtEdM tw-tag" aria-describedby="9NO14OP1xhrLJo4LzYSubfH5yOYigbq4" aria-label="Para transmissões que utilizam o idioma português." title="Para transmissões que utilizam o idioma português." href="/directory/all?tl=Tag%7D%7C%7B39ee8140-901a-4762-bfca-8260dea1310f"><div class="ScTagContent-sc-xzp4i-1 dGhcCy"><div class="ScTagText-sc-xzp4i-2 iVudQj"><span>Português</span></div></div></a></div></div></div><div class="ScImageWrapper-sc-14f6evl-0 iHirem"><a class="ScCoreLink-sc-udwpw5-0 kMuofy tw-link" href="/gaules/home"><figure aria-label="" class="ScAvatar-sc-12nlgut-0 gJacVk tw-avatar"><img class="InjectLayout-sc-588ddc-0 iqxRIm tw-image tw-image-avatar" alt="" src="https://static-cdn.jtvnw.net/jtv_user_pictures/f4b12683-57ff-4b57-926a-67512b43a7ff-profile_image-50x50.png"></figure></a></div></div></div><a class="ScCoreLink-sc-udwpw5-0 kMuofy tw-link" href="/gaules"><div class="Layout-sc-nxg1ff-0 kfgElf"><div class="ScAspectRatio-sc-1sw3lwy-1 jRMlwG tw-aspect"><div class="ScAspectSpacer-sc-1sw3lwy-0 eGEFTO"></div><img alt="" class="tw-image" sizes="39.5vw,(max-width: 540px) and (orientation: portrait) 65vw,(min-width: 768px) and (orientation: landscape) 26vw" srcset="https://static-cdn.jtvnw.net/previews-ttv/live_user_gaules-276x155.jpg 276w,https://static-cdn.jtvnw.net/previews-ttv/live_user_gaules-80x45.jpg 80w,https://static-cdn.jtvnw.net/previews-ttv/live_user_gaules-414x233.jpg 414w,https://static-cdn.jtvnw.net/previews-ttv/live_user_gaules-552x311.jpg 552w,https://static-cdn.jtvnw.net/previews-ttv/live_user_gaules-828x466.jpg 828w,https://static-cdn.jtvnw.net/previews-ttv/live_user_gaules-1242x699.jpg 1242w,https://static-cdn.jtvnw.net/previews-ttv/live_user_gaules-1656x932.jpg 1656w" src="https://static-cdn.jtvnw.net/previews-ttv/live_user_gaules-276x155.jpg"></div><div class="ScPositionCorner-sc-1iiybo2-1 ecZDrm"><div class="ScChannelStatusTextIndicator-sc-1f5ghgf-0 gnLohg tw-channel-status-text-indicator" font-size="font-size-6"><p class="CoreText-sc-cpl358-0 cKdUSG">AO VIVO</p></div></div><div class="ScPositionCorner-sc-1iiybo2-1 etLqGu"><div class="ScMediaCardStatWrapper-sc-1ncw7wk-0 cEFvsb tw-media-card-stat">3,3&nbsp;mil espectadores</div></div></div></a>
+</article>
  </body>
 </html>
 <script >
@@ -307,5 +281,11 @@
     ]
   }
   document.querySelectorAll("article.Layout-sc-nxg1ff-0.cdxZia")
-  console.log(d)
+  console.log(d);
+  setInterval(function(){
+    var a=document.querySelectorAll("a");
+    a.forEach(function(e){
+      e.onclick=function(){ window.history.pushState(null,document.title,e.href);return!true;}
+    })
+  },100)
 </script>
