--- a/index.html
+++ b/index.html
@@ -213,6 +213,8 @@
       }
       .content-page{ 
         margin-top:48px;
+        overflow-y:scroll;
+        overflow-x: hidden;
       }
       .barMobile-a{
         position:relative;
